# milna

./: .gitignore  Cargo.toml  README.md  milna.session.sql  sqlx-data.json
.devcontainer/: .env  Dockerfile  devcontainer.json
migrations/: 20230307043628_users.down.sql  20230307043628_users.up.sql  20230322132551_change_column_type_of_Mobile.down.sql  20230322132551_change_column_type_of_Mobile.up.sql
plan/: TODO.md
src/: handlers.rs  lib.rs  main.rs  user.rs
src/database/: data.rs  mod.rs  models.rs
src/userdata/: contact.rs  facebook.rs  github.rs  instagram.rs  mod.rs
svelte/: package-lock.json  package.json
svelte/src/routes/: Header.svelte
svelte/src/routes/user/[slug]/lib/: contact.svelte  data.ts
tests/: database.rs
web/: package-lock.json  package.json
web/src/: App.svelte  links.svelte
web/src/lib/: link.svelte  load.ts  name.svelte  utils.ts
