[package]
name = "milna"
version = "0.1.0"
edition = "2021"
description = "Contact sharing platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
actix-web = { version = "4.3.1", features = ["macros"] }
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
chrono = { version = "0.4.23" }
futures = { version = "0.3.26" }
tokio = { version = "1.26.0", features = ["macros"] }
serde_json = { version = "1.0.94" }
serde = { version = "1.0.155", features = ["derive"] }
env_logger = { version = "0.10.0" }
utoipa = { version = "3.1.2" }
utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
shuttle-actix-web = { version = "0.12.0" }
shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
shuttle-runtime = { version = "0.12.0" }
shuttle-aws-rds = { version = "0.12.0", features = ["postgres"] }
